# ETL_pipeline_json_to_csv_parquet

./: .gitignore  README.md  etl.py  log_decorator.md  log_loguru.md  pyproject.toml  utils_log.py
