[tool.poetry]
name = "etl-pipeline-json-to-csv-parquet"
version = "0.1.0"
description = ""
authors = ["Jownao <johnnywsevero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
